--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/Gillespie59/angular-logs2server",
   "devDependencies": {
+    "eslint": "^0.14.1",
+    "eslint-plugin-angular": "0.0.3",
     "grunt": "^0.4.5",
+    "grunt-contrib-eslint": "0.0.5",
     "grunt-contrib-uglify": "^0.7.0",
     "load-grunt-config": "^0.16.0"
   }
