--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,11 @@
   "name": "angular-logs2server",
   "version": "0.0.1",
   "main": "./angular-logs2server.js",
-  "ignore": [],
+  "ignore": [
+    ".*",
+    "package.json",
+    "grunt"
+  ],
   "dependencies": {
   }
 }
